--- a/SwashbucklerDiary/wwwroot/i18n/en-US.json
+++ b/SwashbucklerDiary/wwwroot/i18n/en-US.json
@@ -586,10 +586,16 @@
     "List of available devices": "List of available devices",
     "Searching for available devices": "Searching for available devices...",
     "There are currently no available devices": "There are currently no available devices",
-    "No network connection": "No network connection"
+    "No network connection": "No network connection",
+    "Sending": "Sending",
+    "Send successfully": "Send successfully",
+    "Send failed": "Send failed"
   },
   "lanReceiver": {
-    "Waiting for connection": "Waiting for connection..."
+    "Waiting for connection": "Waiting for connection...",
+    "Receiving": "Receiving",
+    "Receive successfully": "Receive successfully",
+    "Receive failed": "Receive failed"
   },
   "Storage": {
     "Content": "Are you sure to clear all caches?",
