♻️ refactor(ImageResourceCardList): correct

--- a/SwashbucklerDiary/wwwroot/i18n/en-US.json
+++ b/SwashbucklerDiary/wwwroot/i18n/en-US.json
@@ -418,7 +418,8 @@
         "Image": {
           "Name": "Image",
           "Path": "Setting / Diary / Image Manage",
-          "DeleteUnusedImage": "Are you sure to delete unused images?"
+          "DeleteUnusedImage": "Are you sure to delete unused images?",
+          "NoImage": "No image"
         }
       },
       "Alert": {
