🆕 feat(PreviewImageDialog): add save local and share

--- a/SwashbucklerDiary/wwwroot/i18n/en-US.json
+++ b/SwashbucklerDiary/wwwroot/i18n/en-US.json
@@ -23,7 +23,9 @@
     "FileShare": "File share",
     "Reset": "Reset",
     "Restore Default": "Restore default",
-    "Quit": "Quit"
+    "Quit": "Quit",
+    "SaveSuccess": "Save success",
+    "SaveFail": "Save fail"
   },
   "Main": {
     "Diary": "Diary",
