--- a/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
+++ b/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
@@ -644,5 +644,18 @@
     "Title": "标题",
     "Content": "内容",
     "Tags": "标签"
+  },
+  "Easter egg": {
+    "FDAF7DC20B5F1B936291CCF081BB5A46": "遇见你很高兴",
+    "D7EFA19FBE7D3972FD5ADB6024223D74": "C#是世界上最好的语言",
+    "A34490B593CDC390C77104721BA7EB39": "不用客气，人人为我，我为人人",
+    "6BE06EC190B673427CFFB45068068D87": "为什么起这个名字？\n\n因为当时我在看《侠客行》",
+    "7ECA689F0D3389D9DEA66AE112E5CFD7": "Hello World",
+    "0CBC6611F5540BD0809A388DC95A615B": "此路不通",
+    "5A7236AEBE23637F6CD0A8D676D1DA45": "群众的眼睛是雪亮的",
+    "86A52BB54EC90AB8D7E1F869DAC8E810": "承蒙关心",
+    "C116367842222A37E03CF0F456B563D6": "恭喜你找到了彩蛋，应该给你发个奖状",
+    "8E5C0A1E46703251C02613C1048177F1": "有时候，诀别就成了永别，请珍惜身边的人",
+    "C83640C604DD5E0EACBF3DE0A1181101": "Bug一个不留 /n/n愿这个世界没有Bug"
   }
 }
