--- a/SwashbucklerDiary/wwwroot/i18n/en-US.json
+++ b/SwashbucklerDiary/wwwroot/i18n/en-US.json
@@ -136,7 +136,8 @@
   },
   "Read": {
     "OpenPrivacy": "Private",
-    "ClosePrivacy": "Cancel private"
+    "ClosePrivacy": "Cancel private",
+    "PrivacyAlert": "Moved into the privacy library"
   },
   "AppName": "Swashbuckler Diary",
   "Mine": {
