♻️ refactor(IconService): Reading data from JSON. Add some icon.

--- a/SwashbucklerDiary/wwwroot/i18n/en-US.json
+++ b/SwashbucklerDiary/wwwroot/i18n/en-US.json
@@ -107,32 +107,42 @@
     "CloseEditCreateTime": "Close edit date"
   },
   "Weather": {
-    "sunny": "sunny",
     "cloudy": "cloudy",
-    "rainy": "rainy",
+    "dust": "dust",
+    "fog": "fog",
+    "hail": "hail",
+    "hazy": "hazy",
+    "hurricane": "hurricane",
+    "lightning": "lightning",
     "lightning-rainy": "lightning-rainy",
+    "pouring": "pouring",
+    "rainy": "rainy",
     "sleet": "sleet",
     "snow": "snow",
-    "windy": "windy",
-    "fog": "fog",
-    "dust": "dust"
+    "sunny": "sunny",
+    "sunny-off": "overcast",
+    "ultraviolet": "ultraviolet",
+    "tornado": "tornado",
+    "windy": "windy"
   },
   "Mood": {
-    "happy": "happy",
-    "excited": "excited",
-    "neutral": "neutral",
-    "cool": "cool",
-    "sad": "sad",
-    "lol": "lol",
-    "cry": "cry",
-    "kiss": "kiss",
-    "dead": "dead",
     "angry": "angry",
-    "devil": "devil",
     "confused": "confused",
-    "wink": "wink",
+    "cool": "cool",
+    "cry": "cry",
+    "dead": "dead",
+    "devil": "devil",
+    "excited": "excited",
+    "frown": "frown",
+    "happy": "happy",
+    "kiss": "kiss",
+    "lol": "lol",
+    "neutral": "neutral",
     "poop": "poop",
-    "sick": "sick"
+    "sad": "sad",
+    "sick": "sick",
+    "tongue": "tongue",
+    "wink": "wink"
   },
   "Read": {
     "OpenPrivacy": "Private",
