--- a/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
+++ b/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
@@ -107,32 +107,42 @@
     "CloseEditCreateTime": "关闭修改日期"
   },
   "Weather": {
-    "sunny": "晴",
     "cloudy": "多云",
-    "rainy": "雨",
+    "dust": "沙尘暴",
+    "fog": "雾",
+    "hail": "冰雹",
+    "hazy": "薄雾",
+    "hurricane": "飓风",
+    "lightning": "闪电",
     "lightning-rainy": "雷阵雨",
+    "pouring": "倾盆大雨",
+    "rainy": "雨",
     "sleet": "雨夹雪",
     "snow": "雪",
-    "windy": "风",
-    "fog": "雾",
-    "dust": "沙尘暴"
+    "sunny": "晴",
+    "sunny-off": "阴",
+    "tornado": "龙卷风",
+    "ultraviolet": "紫外线",
+    "windy": "风"
   },
   "Mood": {
-    "happy": "高兴",
-    "excited": "兴奋",
-    "neutral": "中立",
-    "cool": "酷",
-    "sad": "悲伤",
-    "lol": "哈哈",
-    "cry": "哭泣",
-    "kiss": "吻",
-    "dead": "等死",
-    "angry": "愤怒",
-    "devil": "恶魔",
+    "angry": "怒",
     "confused": "困惑",
-    "wink": "眨眼",
+    "cool": "酷",
+    "cry": "哭",
+    "dead": "难受",
+    "devil": "恶",
+    "excited": "兴奋",
+    "frown": "愁",
+    "happy": "喜",
+    "kiss": "亲亲",
+    "lol": "乐",
+    "neutral": "无情",
     "poop": "便便",
-    "sick": "生病"
+    "sad": "悲",
+    "sick": "病了",
+    "tongue": "略略略",
+    "wink": "你懂的"
   },
   "Read": {
     "OpenPrivacy": "设为私密",
