🆕 feat(History): Export diaries for the selected time range

--- a/SwashbucklerDiary/wwwroot/i18n/en-US.json
+++ b/SwashbucklerDiary/wwwroot/i18n/en-US.json
@@ -87,7 +87,13 @@
     "Not Found": "Not Found"
   },
   "History": {
-    "Calendar": "Calendar"
+    "Calendar": "Calendar",
+    "ExportTime": {
+      "Name": "Select the time range",
+      "Day": "Export all diaries for this date",
+      "Month": "Export all diaries for this month",
+      "Year": "Export all diaries for this year"
+    }
   },
   "Write": {
     "EnableTitle": "Enable title",
