--- a/SwashbucklerDiary/wwwroot/i18n/en-US.json
+++ b/SwashbucklerDiary/wwwroot/i18n/en-US.json
@@ -262,13 +262,6 @@
     "Diary Meaning": "wwwroot/docs/diary-meaning/en-US.md",
     "Markdown Syntax": "wwwroot/docs/markdown-syntax/en-US.md"
   },
-  "Amount": {
-    "Custom": "Custom",
-    "CustomPlace": "Please enter the amount you want to donate",
-    "CurrencySymbol": "$",
-    "Thank": "Thank",
-    "ThankContent": "Thank you, friend. I understand your kindness, so there's no need to really donate to me.\n\nI hope you can have fun and have a pleasant time every day. It would be even better if you could record your life and feelings.\n\nThis is my original intention in creating this software.\n\nDeveloper: Yu Core"
-  },
   "FunctionalDescription": "Functional Description",
   "ErrorHandle": {
     "Title": "Error",
@@ -662,17 +655,24 @@
     "Content": "Content",
     "Tags": "Tags"
   },
-  "Easter egg": {
-    "FDAF7DC20B5F1B936291CCF081BB5A46": "Nice to meet you",
-    "D7EFA19FBE7D3972FD5ADB6024223D74": "C# is the best language in the world",
-    "A34490B593CDC390C77104721BA7EB39": "You're welcome, everyone for me, I for everyone",
-    "6BE06EC190B673427CFFB45068068D87": "Why did you give this name? \n\nBecause at that time, I was watching 'Ode to Gallantry'",
-    "7ECA689F0D3389D9DEA66AE112E5CFD7": "Hello World",
-    "0CBC6611F5540BD0809A388DC95A615B": "Road is blocked",
-    "5A7236AEBE23637F6CD0A8D676D1DA45": "The eyes of the masses are bright with snow",
-    "86A52BB54EC90AB8D7E1F869DAC8E810": "Thank you for your concern",
-    "C116367842222A37E03CF0F456B563D6": "Congratulations on finding the eggs. I should give you a certificate of commendation",
-    "8E5C0A1E46703251C02613C1048177F1": "Sometimes, farewell becomes a farewell, please cherish the people around you",
-    "C83640C604DD5E0EACBF3DE0A1181101": "No bugs left /n/nMay this world be free from bugs"
+  "Sponsor": {
+    "Type": {
+      "QQ": {
+        "Name": "QQ Wallet",
+        "Url": "https://raw.githubusercontent.com/Yu-Core/SwashbucklerDiary/assets/Assets/Images/QQ.png"
+      },
+      "WeChat": {
+        "Name": "WeChat Pay",
+        "Url": "https://raw.githubusercontent.com/Yu-Core/SwashbucklerDiary/assets/Assets/Images/WeChat.png"
+      },
+      "Alipay": {
+        "Name": "Alipay",
+        "Url": "https://raw.githubusercontent.com/Yu-Core/SwashbucklerDiary/assets/Assets/Images/Alipay.jpg"
+      }
+    },
+    "Introduce": {
+      "Title": "Support the development of Swashbuckler Diary",
+      "Content": "Thank you for your use. The current version of Xiake Diary cannot be released without everyone's support. At first, I just wanted to write an app to play with, and also to meet my diary writing needs. \n\nIn addition, the relationship between app registration and the need for domain names and servers has resulted in some expenses. \n\nIf you are interested and it does help you, you can donate to encourage developers to better maintain this project. Thank you for your support."
+    }
   }
 }
