💄 style: update style

--- a/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
+++ b/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
@@ -668,8 +668,8 @@
       }
     },
     "Introduce": {
-      "Title": "支持侠客日记的开发",
-      "Content": "感谢你的使用，侠客日记当前版本的发布离不开大家的支持。最初只是想写个App玩玩，也是为了满足自己写日记的需求。\n\n在不断的更新中，提升自己的同时，确实是付出了一点点心血。加上App备案的关系，需要域名和服务器，产生了一点支出。\n\n如果你感兴趣，并且它确实有帮助到你，可以给予捐赠，鼓励开发者更好的维护这个项目。谢谢你的支持。"
+      "Title": "支持 侠客日记 的开发",
+      "Content": "这个项目的诞生源自于个人兴趣。从初中开始就喜欢写日记，生活虽然略显平淡，却也过的充实，它值得被记录下来。可随着时间的推移，纸笔在生活中的分量逐渐减少，怎样更加方便的写日记，就成了问题。\n\n逛了一圈，市面上的日记类App大都不合我的心意。最终，我决定自已写一个日记App，目标就是简洁、高效。最开始没有接受捐助的打算，只是由于App备案的关系，需要域名和服务器，产生了一点支出。所以还是做了这个捐助页面。\n\n感谢你的使用，侠客日记当前版本的发布离不开大家的支持。如果你感兴趣，并且它有帮助到你，可以给予捐助，鼓励开发者更好的维护这个项目。谢谢你的支持。"
     }
   },
   "Statistics": {
@@ -684,5 +684,8 @@
     "TagCount": "标签数",
     "LocationCount": "位置数",
     "Not have": "无"
+  },
+  "Vditor": {
+    "AddImage": "添加图片"
   }
 }
