--- a/SwashbucklerDiary/wwwroot/i18n/en-US.json
+++ b/SwashbucklerDiary/wwwroot/i18n/en-US.json
@@ -669,7 +669,7 @@
     },
     "Introduce": {
       "Title": "Support the development of Swashbuckler Diary",
-      "Content": "Thank you for your use. The current version of Xiake Diary cannot be released without everyone's support. At first, I just wanted to write an app to play with, and also to meet my diary writing needs. \n\nIn addition, the relationship between app registration and the need for domain names and servers has resulted in some expenses. \n\nIf you are interested and it does help you, you can donate to encourage developers to better maintain this project. Thank you for your support."
+      "Content": "The birth of this project stems from personal interests. I have been fond of writing a diary since middle school. Although life may seem dull, it is also fulfilling and worth recording. With the passage of time, the weight of paper and pen in daily life gradually decreases, and how to write a diary more conveniently becomes a problem. \n\nAfter browsing around, most of the diary apps on the market do not meet my expectations. In the end, I decided to write my own diary app with the goal of simplicity and efficiency. At the beginning, there was no intention of accepting donations, but due to the registration of the app, a domain name and server were required, resulting in some expenses. So I still created this donation page. \n\nThank you for your use. The current version of Swashbuckler Diary cannot be released without everyone's support. If you are interested and it helps you, you can donate to encourage developers to better maintain this project. Thank you for your support."
     }
   },
   "Statistics": {
@@ -683,5 +683,8 @@
     "LastDate": "Last date",
     "TagCount": "Tags",
     "Not have": "Not have"
+  },
+  "Vditor": {
+    "AddImage": "Add Image"
   }
 }
