♻️ refactor: markdown's some optimize

--- a/SwashbucklerDiary/wwwroot/i18n/en-US.json
+++ b/SwashbucklerDiary/wwwroot/i18n/en-US.json
@@ -695,5 +695,8 @@
       "Asc": "DiaryCount-Asc",
       "Desc": "DiaryCount-Desc"
     }
+  },
+  "Image": {
+    "Not exist": "Image does not exist"
   }
 }
