--- a/src/SwashbucklerDiary.WebAssembly/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.WebAssembly/wwwroot/i18n/en-US.json
@@ -1,4 +1,9 @@
 {
   "ShowSettingsUI": "Please open the settings to access cookies and website permissions",
-  "External images are not supported": "External images are not supported"
+  "External images are not supported": "External images are not supported",
+  "pwa": {
+    "new-content-available": "New content is available. Click Refresh to update.",
+    "ignore": "Ignore",
+    "refresh": "Refresh"
+  }
 }
