--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -665,7 +665,7 @@
     },
     "Introduce": {
       "Title": "支持 侠客日记 的开发",
-      "Content": "这个项目的诞生源自于个人兴趣。从初中开始就喜欢写日记，生活虽然略显平淡，却也过的充实，它值得被记录下来。可随着时间的推移，纸笔在生活中的分量逐渐减少，怎样更加方便的写日记，就成了问题。\n\n逛了一圈，市面上的日记类App大都不合我的心意。最终，我决定自已写一个日记App，目标就是简洁、高效。最开始没有接受捐助的打算，只是由于App备案的关系，需要域名和服务器，产生了一点支出。所以还是做了这个捐助页面。\n\n感谢你的使用，侠客日记当前版本的发布离不开大家的支持。如果你感兴趣，并且它有帮助到你，可以给予捐助，鼓励开发者更好的维护这个项目。谢谢你的支持。"
+      "Content": "这个日记App的诞生，源于我自初中起对写日记的热爱。那时，我热衷于捕捉生活中的点滴，用文字记录下那些看似平凡却充满意义的时刻。然而，随着年龄的增长，携带纸笔逐渐变得不便，于是我开始探索电子设备作为新的日记载体。\n\n在市场上众多的日记App中，始终未能找到一款真正符合我心意的产品。这激发了我一个大胆的想法：为何不自己创造一个理想的日记App呢？于是，我开始着手开发这款简洁、高效、便捷的日记应用，力求让每一个热爱写日记的人都能找到归属感。\n\n如果您觉得这个项目为您带来了价值，或者对您的生活有所裨益，那么，我们诚挚地邀请你给予一份支持。您的捐助不仅是对我们工作的肯定，更是对我们不断优化、进步的鼓励。再次感谢您一路的支持与陪伴，愿我们都能在自己的江湖里，成为心中的侠客。"
     }
   },
   "Statistics": {
