🆕 feat: add StatisticsCard setting

--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
@@ -439,6 +439,10 @@
           "Name": "Achievement",
           "Path": "Setting / Alert / Achievement"
         }
+      },
+      "StatisticsCard": {
+        "Name": "Statistics card",
+        "Path": "Setting / Statistics card"
       }
     }
   },
