--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -439,6 +439,10 @@
           "Name": "成就",
           "Path": "设置 / 提示框 / 成就"
         }
+      },
+      "StatisticsCard": {
+        "Name": "统计卡片",
+        "Path": "设置 / 统计卡片"
       }
     }
   },
